--- a/src/app/schronisko/zwierzak/zwierzak.component.html
+++ b/src/app/schronisko/zwierzak/zwierzak.component.html
@@ -14,4 +14,7 @@
 <div class="najedzenie" [title]="'Najedzenie ' + zwierzak.najedzenie + '%1'">
     <div [style.width.%]="zwierzak.najedzenie"></div>
 </div>
+<div class="actions">
+    <ng-content></ng-content>
+</div>
 </div>
