--- a/src/app/schronisko/poczekalnia/poczekalnia.component.html
+++ b/src/app/schronisko/poczekalnia/poczekalnia.component.html
@@ -1,4 +1,5 @@
 <h3 class="section-name">Poczekalnia</h3>
+<p>Tutaj znajdują się osoby, które czekają na zwierzaki</p>
 
 <div>
 @for(odwiedzajacy of odwiedzajacy; track odwiedzajacy){
