--- a/src/app/schronisko/zwierzak/zwierzak.component.css
+++ b/src/app/schronisko/zwierzak/zwierzak.component.css
@@ -47,3 +47,39 @@
     padding: 15%;
     border-radius: 5px; 
   }
+
+  .zwierzak_wypozyczony_background {
+    background-color: rgba(114, 90, 184, 0.575); /* Set the background color */
+    padding: 15%;
+    border-radius: 5px; 
+  }
+
+  .image-container {
+    position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  .main-image {
+    max-width: 100%;
+    display: block;
+  }
+  
+  .visitor-badge {
+    position: absolute;
+    bottom: -5px;
+    right: -5px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: white;
+  }
+  
+  .visitor-badge img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
